# Mandelbrot

./: .appveyor.yml  Application.cpp  Application.h  Application.hpp  Bouton.cpp  Bouton.hpp  CMakeLists.txt  GUI.cpp  GUI.h  Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.hpp  Menu.cpp  Menu.hpp  Option.cpp  Option.h  Option.hpp  Parameters.h  README.md  TextBox.cpp  TextBox.h  TextBox.hpp  main.cpp  police.hpp
